# RoomLogic

./: README.md  build.gradle.kts  rust_api_login.lnk  settings.gradle.kts
ActixWebAPI/: .env  Cargo.toml  Dockerfile
ActixWebAPI/src/: main.rs
RustApi/: .env  Cargo.toml
RustApi/src/: main.rs
app/: build.gradle.kts
app/src/: google-services.json
app/src/androidTest/java/com/example/roomlogic/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/roomlogic/: MainActivity.java
app/src/main/java/com/example/roomlogic/adapter/: ClientAdapter.java  ReservationAdapter.java  RoomAdapter.java
app/src/main/java/com/example/roomlogic/api/: ApiClient.java  ApiService.java  ClientApi.java  ImgBBApi.java  RoomApi.java  (+2 more)
app/src/main/res/drawable/: rounded_button.xml
app/src/main/res/layout/: activity_clients.xml  activity_consult.xml  activity_dashboard.xml  activity_habitaciones.xml  activity_images.xml  activity_login.xml  activity_main.xml  activity_manage_clients.xml  activity_manage_reservations.xml  activity_manage_rooms.xml  activity_register.xml  activity_register_client.xml  activity_register_room.xml  activity_report.xml  activity_reservations.xml  activity_rooms.xml  dialog_client_form.xml  dialog_reservation_form.xml  dialog_room_form.xml  item_client.xml  item_reservation.xml  item_room.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/roomlogic/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+50 files in other folders)
