[package]
name = "ActixWebAPI"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
actix-rt = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
actix-cors = "0.6"
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }