[package]
name = "RustApi"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
sqlx = { version = "0.6", features = ["mysql", "runtime-tokio-native-tls", "time"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
time = "0.3" # Se agrega explícitamente para soporte de fechas